fixed spacing in rich text editor

--- a/frontend/website-client/src/components/pages/blocks/recipe-block.scss
+++ b/frontend/website-client/src/components/pages/blocks/recipe-block.scss
@@ -57,7 +57,7 @@
   }
 
   h1,
-  h2, h2 + div > p {
+  h2, h2 + div .richTextEditor > p {
     margin-top: 0.3em;
     margin-bottom: 0.5em;
   }
